tests/paczka1/small_fuzzy/88846370.err
Error in line 7: S307 S307 65,1
Error in line 8: S307 A805 43,6
